# evaltor

./: .gitignore  Cargo.toml  LICENSE  bacon.toml
.github/workflows/: build.yml
migrations/: 20260204114839_init.down.sql  20260204114839_init.up.sql  20260204132339_runner_test_id.down.sql  20260204132339_runner_test_id.up.sql  20260204140245_runner_passed.down.sql  20260204140245_runner_passed.up.sql  20260204152317_runner_attempt_id.down.sql  20260204152317_runner_attempt_id.up.sql  20260204152609_attempt_no_ids.up.sql  20260204184939_users.down.sql  20260204184939_users.up.sql  20260204232748_runner_expected_out.down.sql  20260204232748_runner_expected_out.up.sql  20260205182518_test_points.down.sql  20260205182518_test_points.up.sql  20260205215628_assignments_to_users.down.sql  20260205215628_assignments_to_users.up.sql  20260207235127_attempts_users.down.sql  20260207235127_attempts_users.up.sql  20260208144010_class_creators.down.sql  20260208144010_class_creators.up.sql
src/: args.rs  auth.rs  filters.rs  lib.rs  main.rs  nsjail.rs  points.rs  runner_manager.rs  state.rs
src/models/: assignment.rs  attempt.rs  class.rs  mod.rs  runner.rs  test.rs  user.rs  user_assignments.rs
src/routes/: assignment.rs  attempt.rs  class.rs  mod.rs
src/templates/: assignment.rs  attempt.rs  class.rs  mod.rs  runner.rs
templates/: assignment.html  base.html  class.html  class_admin.html  index.html  login.html
templates/partials/: attempts.html  runners.html
